--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@ body {
 
 
 
-/* Classes */
+/**
+ * Objetos
+ */
 
 .container {
 	align-items: center;
@@ -93,24 +95,32 @@ body {
 	justify-content: center;
 	right: 16px;
 	position: absolute;
+	transition: opacity 0.2s, visibility 0.2s;
 }
 
 .option {
+	align-items: center;
 	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8);
 	color: #333;
 	cursor: pointer;
-	opacity: 0;
-	transition: color 0.2s, opacity 0.2s, visibility 0.2s;
+	display: flex;
+	justify-content: center;
+	position: relative;
+	transition: background-color 0.2s, color 0.2s;
 	user-select: none;
-	visibility: hidden;
 }
 
 .option:hover {
-	color: #eee;
+	color: #00bfff;
 }
 
-.option:active {
-	color: #00bfff;
+.option.danger:hover {
+	color: red;
+}
+
+.option:active,
+.option.danger:active {
+	color: #eee;
 }
 
 .input {
@@ -134,6 +144,31 @@ body {
 .input:focus {
 	background-color: #ccc;
 	color: #333;
+}
+
+.param {
+	background-color: black;
+	border-radius: 4px 4px 8px 8px;
+	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.6);
+	font-size: 10pt;
+	padding: 4px;
+	position: absolute;
+	right: 0;
+	top: calc(100% + 4px);
+	transition: opacity 0.2s, visibility 0.2s;
+	user-select: none;
+}
+
+.param > input {
+	background: none;
+	border: none;
+	color: #eee;
+	font-weight: bold;
+	margin: none;
+	padding: 2px;
+	outline: none;
+	text-align: right;
+	width: 24px;
 }
 
 .text {
@@ -163,12 +198,36 @@ body {
 
 
 
-/* Modificadores */
+/**
+ * Modificadores
+ */
 
 .grow {
 	flex-grow: 1;
 }
 
+.hidden {
+	opacity: 0;
+	visibility: hidden;
+}
+
 .push-left {
 	margin-right: auto;
+}
+
+.push-right {
+	margin-left: auto;
+}
+
+
+
+/**
+ * Outros
+ */
+
+/* Retirado de: https://css-tricks.com/snippets/css/turn-off-number-input-spinners */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
