--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ body {
 	height: 100%;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
 
 
 /**
@@ -26,12 +31,20 @@ body {
 }
 
 .title {
-	cursor: default;
 	font-size: 48pt;
 	font-weight: bold;
 	margin-left: 16px;
-	user-select: none;
 	text-shadow: 0 0 12px rgba(0, 0, 0, 0.8);
+	transition: color 0.2s, text-shadow 0.2s;
+	user-select: none;
+}
+
+.title:hover {
+	color: #00bfff;
+}
+
+.title:active {
+	text-shadow: 0 0 8px rgba(0, 191, 255, 0.3);
 }
 
 .help {
@@ -43,7 +56,7 @@ body {
 	justify-content: center;
 	margin-right: 16px;
 	text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
-	transition: color 0.2s;
+	transition: color 0.2s, text-shadow 0.2s;
 	user-select: none;
 }
 
@@ -61,12 +74,41 @@ body {
 	margin: 2px 0 -2px 0;
 }
 
-.col {
+.help.active {
+	color: #00bfff;
+	text-shadow: 0 0 8px rgba(0, 191, 255, 0.3);
+}
+
+.help.active:hover {
+	text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+}
+
+.help.active:active {
+	color: #eee;
+}
+
+.leader {
+	align-items: center;
 	display: flex;
 	flex-direction: column;
+	flex-grow: 1;
+	justify-content: center;
+	position: relative;
+	width: 100%;
+}
+
+.page {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
 	height: 100%;
 	justify-content: center;
-	margin: 0 16px;
+	left: 0;
+	top: 0;
+	position: absolute;
+	transition: opacity 0.5s, visibility 0.5s;
+	width: 100%;
 }
 
 .row {
@@ -76,6 +118,14 @@ body {
 	justify-content: center;
 	padding: 16px 0;
 	width: 100%;
+}
+
+.col {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: center;
+	margin: 0 16px;
 }
 
 .box {
@@ -206,6 +256,87 @@ body {
 	font-weight: bolder;
 }
 
+.pars {
+	background-color: #333;
+	border-radius: 1px;
+	box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.6);
+	color: #eee;
+	overflow-y: auto;
+	margin: 4px;
+	padding: 0 16px;
+	text-align: justify;
+}
+
+.contour {
+	align-items: flex-start;
+	display: flex;
+	justify-content: center;
+}
+
+.set {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	font-size: 8pt;
+	justify-content: center;
+	margin: 1px;
+}
+
+.alphabet,
+.group {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.arrow {
+	text-shadow: 0 0 12px rgba(0, 0, 0, 0.8);
+	color: #ccc;
+	margin: 2px 0;
+}
+
+.char {
+	align-items: center;
+	border-radius: 50%;
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.8);
+	display: flex;
+	height: 15px;
+	justify-content: center;
+	line-height: 8pt;
+	margin: 1px;
+	text-align: center;
+	width: 15px;
+}
+
+.alphabet > .char {
+	background-color: #ccc;
+	color: #333;
+}
+
+.group > .char {
+	background-color: #070707;
+	color: #2e1;
+	font-family: 'Courier New', Courier, monospace;
+}
+
+.bull {
+	background-color: none;
+	border: 1px solid #070707;
+	border-radius: 50%;
+	height: 1px;
+	width: 1px;
+}
+
+.link {
+	transition: color 0.2s, text-shadow 0.2s;
+}
+
+.link:active {
+	color: #00bfff;
+	text-shadow: 0 0 4px rgba(0, 191, 255, 0.3);
+}
+
 #encrypted {
 	color: #2e1;
 	font-family: 'Courier New', Courier, monospace;
@@ -225,6 +356,14 @@ body {
  * Modificadores
  */
 
+.autosize {
+	width: auto;
+}
+
+.distributed {
+	justify-content: space-between;
+}
+
 .grow {
 	flex-grow: 1;
 }
@@ -238,12 +377,24 @@ body {
 	margin-top: 48px;
 }
 
+.no-select {
+	user-select: none;
+}
+
 .push-left {
 	margin-right: auto;
 }
 
 .push-right {
 	margin-left: auto;
+}
+
+.push-top {
+	margin-bottom: auto;
+}
+
+.unbreak {
+	white-space: nowrap;
 }
 
 
