--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 	display: flex;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Ubuntu, Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	height: 100%;
+	overflow: hidden;
 }
 
 a {
