--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
 	display: flex;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Ubuntu, Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	height: 100%;
-	overflow: hidden;
 }
 
 a {
@@ -107,7 +106,6 @@ code {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
 	height: 100%;
 	justify-content: center;
 	left: 0;
@@ -217,7 +215,7 @@ code {
 	margin: 4px;
 	padding: 8px;
 	outline: none;
-	overflow: auto;
+	overflow-y: auto;
 	resize: none;
 	transition: background-color 0.2s, color 0.2s;
 }
@@ -399,11 +397,12 @@ code {
 .pars {
 	background-color: #333;
 	border-radius: 1px;
-	box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.6)0.6;;
+	box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.6);
 	color: #eee;
+	height: 100%;
 	line-height: 125%;
-	overflow-y: auto;
 	margin: 4px;
+	overflow-y: auto;
 	padding: 0 16px;
 	text-align: justify;
 }
@@ -525,6 +524,10 @@ code {
 
 .error {
 	background-color: #d01;
+}
+
+.fill {
+	height: 100%;
 }
 
 .forbidden {
